feat(admin): danh muc nhieu cap + seed Laptop chinh hang > Laptop A + thuoc tinh (V23)
- V23: them danh muc con "Laptop chinh hang" (con cua Laptop), phan loai "Laptop A", 6 thuoc tinh + gia tri, dung thong_so_loc
- Cay danh muc admin render de quy danh muc con (truoc chi 2 cap goc->phan loai)
- Form danh muc them chon "Danh muc cha"; nut "Them danh muc con"; BE DanhMucRequest.danhMucChaId + getCay de quy

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>